# apple-to-google-cal

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
src/icloud_gcal_mirror/: __init__.py  cli.py  config.py  credentials.py  doctor.py  google.py  google_event.py  icloud.py  interfaces.py  lock.py  logging_config.py  models.py  paths.py  redaction.py  retry.py  startup.py  status.py  storage.py  sync.py  time_utils.py
tests/: conftest.py  fakes.py  test_foundation.py  test_sync_engine.py
