[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icloud-google-calendar-mirror"
version = "0.1.0"
description = "One-way iCloud Calendar to Google Calendar mirror for Windows."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Personal application" }]
dependencies = [
    "caldav>=2.0",
    "google-api-python-client>=2.130",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "icalendar>=5.0",
    "keyring>=25.0",
    "python-dateutil>=2.9",
    "requests>=2.32",
    "tzdata>=2025.2; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "types-requests>=2.32",
]

[project.scripts]
icloud-gcal-mirror = "icloud_gcal_mirror.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".pytest-tmp",
    ".ruff_cache",
    ".test-tmp",
    "build",
    "dist",
    "pytest-cache-files-*",
    "src/*.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
packages = ["icloud_gcal_mirror"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config -p no:cacheprovider"

[tool.coverage.run]
branch = true
source = ["icloud_gcal_mirror"]

[tool.coverage.report]
show_missing = true
skip_covered = true
